# twm

./: CNAME  Cargo.toml  README.md  config.debug.toml  index.html  license.md  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  docs.yml
cli/: Cargo.toml  readme.md
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: bbox.rs  debug.rs  display.rs  lib.rs  manager.rs  tile.rs  util.rs  window.rs  workspace.rs
core/src/config/: file_types.rs  mod.rs
core/src/layout/: middle_layout.rs  mod.rs  sided_layout.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/twm_core/layout/: trait.DynClone.js
implementors/typetag/: trait.Strictest.js
main/: Cargo.toml
main/src/: config.rs  keys.rs  main.rs  platform.rs  twm.rs
protocol/: Cargo.toml  readme.md
protocol/src/: lib.rs
renderer-windows/: Cargo.toml
renderer-windows/src/: lib.rs
src/twm_core/: bbox.rs.html  debug.rs.html  display.rs.html  lib.rs.html  manager.rs.html  tile.rs.html  util.rs.html  window.rs.html  workspace.rs.html
src/twm_core/config/: file_types.rs.html  mod.rs.html
src/twm_core/layout/: middle_layout.rs.html  mod.rs.html  sided_layout.rs.html
twm_core/: all.html  index.html  sidebar-items.js  trait.DynClone.html
twm_core/bbox/: enum.SplitDirection.html  index.html  sidebar-items.js  struct.BBox.html  struct.BBoxBuilder.html  struct.HorizontalSplit.html  struct.VerticalSplit.html
twm_core/config/: fn.config_file_path.html  fn.parse.html  index.html  sidebar-items.js
twm_core/config/file_types/: fn.parse.html
twm_core/display/: index.html  sidebar-items.js  struct.Display.html  type.DisplayId.html
twm_core/layout/: index.html  sidebar-items.js  struct.LayoutMeta.html  struct.LayoutUpdateInfo.html  trait.DynClone.html  trait.Layout.html
twm_core/layout/middle_layout/: index.html  sidebar-items.js  (+1 more)
twm_core/manager/: index.html  sidebar-items.js  struct.Manager.html
twm_core/tile/: index.html  sidebar-items.js  struct.Tile.html  type.TileId.html
twm_core/util/: enum.Direction.html  index.html  sidebar-items.js
twm_core/window/: index.html  sidebar-items.js  struct.Window.html  type.WindowHandle.html  type.WindowId.html
twm_core/workspace/: index.html  sidebar-items.js  struct.Workspace.html  type.WorkspaceId.html
(+4 files in other folders)
