[package]
name = "twm-core"
version = "0.1.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.31"
derivative = "2.1.1"
directories-next = "1.0.1"
dyn-clone = "1.0.2"
inventory = "0.1.7"
json5 = { version = "0.2.8", optional = true }
lazy_static = "1.4.0"
log = "0.4.8"
nom = "6.0.0-alpha1"
ron = { version = "0.6.0", optional = true }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56" } #, optional = true }
serde_yaml = { version = "0.8.13", optional = true }
strum = "0.18.0"
strum_macros = "0.18.0"
toml = { version = "0.5.6", optional = true }
tracing = { version = "0.1.16", features = ["attributes"] }
typetag = "0.1.5"
quickcheck = "0.9.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
quickcheck_macros = "0.9.1"
tracing-subscriber = "0.2.7"

[build-dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = "1.0.33"

[features]
default = ["config-toml"]
config-json = []
config-json5 = ["json5"]
config-ron = ["ron"]
config-toml = ["toml"]
config-yaml = ["serde_yaml"]
