[package]
name = "twm-main"
version = "0.1.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
env_logger = "0.6"
log = "0.4.8"
named_pipe = "0.4.1"
twm-core = { path = "../core" }
systray = "0.4.0"
twm-protocol = { path = "../protocol" }
jsonrpc-ipc-server = "14.2.0"
serde = { version = "1.0.114", features = ["derive"] }
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
keyboard-shortcut-parser = "0.1.0"
ctrlc = "3.1.4"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-log = { version = "0.1.1", features = ["env_logger"] }
tracing-futures = { version = "0.2.4", features = ["futures-01"] }
tokio = { version = "0.2", features = ["full"] }
